Changing repositories to use entities instead of the base model